# asset-tracker

./: .gitignore  README.md  build-with-tag-version.mjs  dev-with-tag-version.mjs  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: linux-arch-release.yml  linux-flatpak-release.yml  release-linux-appimage.yml  release-linux-flatpak.yml  release-windows.yml  windows-release.yml
flatpak/: com.github.mackenzie779.assettracker.desktop  com.github.mackenzie779.assettracker.yml
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  202509220001_init.sql  202509240001_finance.sql  20250924002_categories.sql  20250924003_drop_reimbursable.sql  202509240200_account_type.sql  20250925_tx_extras.sql
src-tauri/src/: main.rs  tx_search_export.rs
src/components/: AccountCard.tsx  AccountSelect.tsx  AccountsList.tsx  Amount.tsx  AppVersion.tsx  AssetForm.tsx  AssetTable.tsx  BasicSelect.tsx  CategorySelect.tsx  ConfirmDialog.tsx  CreateAccountCard.tsx  CreateAccountDialog.tsx  HideAmountsToggle.tsx  Layout.tsx  Modal.tsx  TransactionAddRow.tsx  TransactionTableTx.tsx  TransactionsTable.tsx
src/hooks/: useCategories.ts
src/lib/: api.ts  format.ts  number.ts
src/pages/: Accounts.tsx  Categories.tsx  Home.tsx  Login.tsx  Logout.tsx  Settings.tsx  Stats.tsx  Transactions.tsx
src/pages/transactions/: AccountSelectTx.tsx
src/types/: static.d.ts
