
[package]
name = "assettracker"
version = "0.1.0"
description = "Local-first AssetTracker app"
authors = ["MacKenzie779"]
edition = "2021"
default-run = "assettracker"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-save", "dialog-message", "dialog-confirm", "dialog-ask", "dialog-open", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
rust_xlsxwriter = "0.69"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
