
[package]
name = "assettracker"
version = "0.1.0"
description = "Local-first AssetTracker app"
authors = ["MacKenzie779"]
edition = "2021"
default-run = "assettracker"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
libsqlite3-sys = { version = ">=0.26.0", features = ["bundled-sqlcipher-vendored-openssl"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
rust_xlsxwriter = "0.69"
printpdf = "0.5"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
ashpd = { version = "0.12", default-features = false, features = ["tokio"] }


[profile.release]
lto = true
codegen-units = 1
opt-level = "s"

[features]
# Used by Tauri CLI for production builds to load assets via a custom protocol.
# Forwards to the tauri crate's feature of the same name (Tauri v1).
custom-protocol = ["tauri/custom-protocol"]
default = []
